--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ nav ul{
   display: flex;
   justify-content: center;
 }
+nav ul li{
+   list-style: none;
+   margin: 0  23px;
+}
 
 nav ul li a{
   text-decoration: none;
